# adsp.biquad.filters

./: .gitignore  .travis.yml  CMakeLists.txt  FindTinyXML.cmake  Findasplib.cmake  README.md  appveyor.yml
adsp.biquad.filters/: addon.xml  addon.xml.in  changelog.txt
adsp.biquad.filters/resources/language/English/: strings.po
adsp.biquad.filters/resources/skins/skin.confluence/720p/: DialogParametricEQ.xml
adsp.biquad.filters/resources/skins/skin.estuary/1080i/: DialogParametricEQ.xml
cmake/: addon-template-helpers.cmake
depends/common/asplib/: CMakeLists.txt  asplib.txt
doxygen_resources/: Addon Structure.pptx  Doxyfile.doxy
src/: ADDONOptional.cpp  ADDONOptional.h  BiquadFiltersSettings.cpp  BiquadFiltersSettings.h  DSPProcessor.cpp  DSPProcessor.h
src/Dialogs/: GUIDialogPostProcess.cpp  GUIDialogPostProcess.h
src/Messages/: BiquadMessage_types.h
src/template/: ADSPAddonHandler.cpp  ADSPHelpers.cpp  ADSPHelpers.h  ADSPProcessorHandle.cpp  AddonHelpers.cpp  AddonHelpers.h  GUIDialogBase.cpp  IADDONOptional.cpp  IADSPProcessor.cpp  client.cpp  doxygenDocu.h
src/template/AddonExceptions/: IAddonException.h  TAddonException.h
src/template/Messages/: ADSPModeMessage.cpp
src/template/Settings/: ISettingsElement.h  SettingsHelpers.cpp  SettingsHelpers.h  SettingsManager.cpp  SettingsManager.h  TSettingsElement.h
src/template/configuration/: templateConfiguration.cpp  templateConfiguration.h
src/template/include/: ADSPAddonHandler.h  ADSPModeMessage.h  ADSPProcessorHandle.h  GUIDialogBase.h  IADDONOptional.h  IADSPProcessor.h  MACROHelper.h  checkTemplateConfig.h  client.h  typedefs.h
src/utils/: stdStringUtils.h
